[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Popup_regular_building.gd" type="Script" id=1]
[ext_resource path="res://GFX/spr_nine_slice_box.png" type="Texture" id=2]
[ext_resource path="res://GFX/spr_nine_slice_box_2.png" type="Texture" id=3]
[ext_resource path="res://small_font_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://GFX/minus_button.png" type="Texture" id=5]
[ext_resource path="res://GFX/plus_button.png" type="Texture" id=6]
[ext_resource path="res://GFX/close_button.png" type="Texture" id=7]

[node name="Popup_regular_building" type="Node2D"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 112.0
margin_bottom = 66.0
rect_min_size = Vector2( 96, 64 )

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
margin_right = 112.0
margin_bottom = 66.0
texture = ExtResource( 2 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 112.0
margin_bottom = 66.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
margin_right = 112.0
margin_bottom = 66.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_right = 1.0
margin_bottom = 66.0
rect_min_size = Vector2( 1, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 5.0
margin_right = 107.0
margin_bottom = 66.0
rect_min_size = Vector2( 80, 50 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 102.0
margin_bottom = 4.0
rect_min_size = Vector2( 0, 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 8.0
margin_right = 102.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 0
texture = ExtResource( 3 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="_name" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 5.0
margin_right = -6.0
margin_bottom = -6.0
custom_fonts/font = ExtResource( 4 )
text = "Building name"
align = 1
autowrap = true

[node name="nbr_workers" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 102.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 8 )
custom_fonts/font = ExtResource( 4 )
text = "Free woodcutter : 0"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 102.0
margin_bottom = 58.0

[node name="Label3" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 46.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 8 )
custom_fonts/font = ExtResource( 4 )
text = "Woodcutters"

[node name="Remove_Woodcutter_button" type="TextureButton" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 50.0
margin_right = 66.0
margin_bottom = 16.0
texture_normal = ExtResource( 5 )

[node name="nbr_woodcutter" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_top = 4.0
margin_right = 82.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 8 )
custom_fonts/font = ExtResource( 4 )
text = "0/4"

[node name="Add_Woodcutter_button" type="TextureButton" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 102.0
margin_bottom = 16.0
texture_normal = ExtResource( 6 )

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 102.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 4 )

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 111.0
margin_right = 112.0
margin_bottom = 66.0
rect_min_size = Vector2( 1, 0 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 100.0
margin_top = -6.0
margin_right = 116.0
margin_bottom = 10.0
texture_normal = ExtResource( 7 )
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer/Remove_Woodcutter_button" to="." method="_on_Remove_Woodcutter_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer/Add_Woodcutter_button" to="." method="_on_Add_Woodcutter_button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
